# chef

./: .gitignore  404.html  cpchefConfig.yaml  cpchefConfig.yaml.example  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
cpc/: __init__.py  cpc.py  natsClient.py
cpc/plugins/: Readme.md  context.py
cpchef/: __init__.py  cpchef.py  loadConfiguration.py  utils.py
cpchef/plugins/common/: registerArtefacts.py
cpchef/plugins/context/: context.py  context.sh
docs/: using-Lua-NATS-and-Luv-together.md
scripts/: installEditableCpchefCommand
