[metadata]
name = computePodChef
version = 0.0.1
description = A process which runs, on behalf of users, one type of task inside a ComputePod 
url = https://github.com/computePods/computePodChef
author = Stephen Gaito
author_email = stephen@perceptisys.co.uk

[options]
packages = cpc
install_requires =
  cekit  >= 3.9
  click  >= 7.0
  jinja2 >= 2.10.1
  pyyaml >= 5.3.1

[options.entry_points]
console_scripts =
    cpc = cpc:cli
