[metadata]
name = computePodChef
version = 0.0.1
description = A process which runs, on behalf of users, one type of task inside a ComputePod 
url = https://github.com/computePods/computePodChef
author = Stephen Gaito
author_email = stephen@perceptisys.co.uk

[options]
packages = cpc
install_requires =
  click               >= 7.0
  jinja2              >= 2.10.1
  pyyaml              >= 5.3.1
  asyncio-nats-client >= 0.11.4
  aiofiles            >= 0.6.0
  fastapi             >= 0.63.0
  hypercorn           >= 0.11.2

[options.entry_points]
console_scripts =
    cpc = cpc:cli
